fix(Recipes/css): avoid unnecessary vertical overflow

--- a/src/styles/SearchResults.css
+++ b/src/styles/SearchResults.css
@@ -4,12 +4,6 @@
   border-top-right-radius: 38px;
   height: 100%;
   margin: 0 -8px 50px;
-  min-height: calc(100vh - 56px - 50px);
+  min-height: calc(100vh - 55px - 13px - 97px - 24px - 55px);
   padding: 6px 20px 8px 20px;
-}
-
-@media only screen and (min-width: 800px) {
-  .search-results {
-    min-height: calc(100vh - 56px - 13px - 21px - 81px - 84px);
-  }
 }
